monitoring/master/alertmanager/service.yml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9093'
spec:
  selector:
    app: alertmanager
  ports:
  - name: "http"
    port: 9093
    protocol: TCP
    targetPort: 9093
