monitoring/master/alertmanager/ingress_old.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: "true"
#    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: prometheus
  namespace: monitoring 
spec:
  rules:
  - host: alertmanager.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
